# gr-specest

./: CMakeLists.txt
examples/: specest_noisy_sinusoid_mtm.py
grc/: CMakeLists.txt
include/specest/: CMakeLists.txt  adaptiveweighting_vff.h  arburg_impl.h  arburg_vcc.h  arfcov_impl.h  arfcov_vcc.h  arfmcov_impl.h  arfmcov_vcc.h  burg.h  correst_impl.h  cyclo_fam.h  cyclo_fam_calcspectrum_impl.h  cyclo_fam_calcspectrum_vcf.h  esprit.h  esprit_fortran_impl.h  esprit_impl.h  esprit_spectrum_vcf.h  esprit_vcf.h  fcov.h  fmcov.h  moving_average_vff.h  music.h  music_armadillo_impl.h  music_fortran_impl.h  music_impl.h  music_spectrum_vcf.h  music_vcf.h  pad_vector.h  reciprocal_ff.h  stream_to_vector_overlap.h  welch.h  welchsp.h
lib/: CMakeLists.txt  adaptiveweighting_vff.cc  arburg_impl.cc  arburg_vcc.cc  arburg_vcc_impl.cc  arburg_vcc_impl.h  arfcov_impl.cc  arfcov_vcc.cc  arfcov_vcc_impl.cc  arfcov_vcc_impl.h  arfmcov_impl.cc  arfmcov_vcc.cc  arfmcov_vcc_impl.cc  arfmcov_vcc_impl.h  burg.cc  correst_impl.cc  cyclo_fam.cc  cyclo_fam_calcspectrum_impl.cc  cyclo_fam_calcspectrum_vcf.cc  esprit.cc  esprit_fortran_impl.cc  esprit_spectrum_vcf.cc  esprit_vcf.cc  esprit_vcf_impl.cc  esprit_vcf_impl.h  fcov.cc  fmcov.cc  moving_average_vff.cc  music.cc  music_armadillo_impl.cc  music_fortran_impl.cc  music_spectrum_vcf.cc  music_vcf.cc  pad_vector.cc  qa_arburg_impl.cc  qa_cyclo_fam_calcspectrum_impl.cc  qa_esprit_fortran_impl.cc  qa_music_armadillo_impl.cc  qa_music_fortran_impl.cc  reciprocal_ff.cc  (+3 more)
python/: CMakeLists.txt  logpwrspectrum.py  qa_specest_mtm.py  qa_specest_vectormanip.py  qa_specest_welch.py  signal_generator.py  specest_mtm.py  spectrum_sink_gl.py
swig/: CMakeLists.txt  specest_armadillo_swig.i  specest_swig.i
